--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://use.typekit.net/znm4lev.css"); /*font import*/
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -19,3 +21,14 @@
 /* body {
   color: rgb(var(--foreground-rgb));
 } */
+
+h1 {
+  font-family: "gyst-variable", sans-serif;
+  font-variation-settings: "wght" 100;
+}
+
+p {
+  font-family: "arboria", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
