--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -97,8 +97,12 @@ p {
   max-width: 420px;
   margin: auto;
   height: 100vh;
-  /* padding: 0 24px; */
 }
+
+.padding {
+  padding: 0 24px;
+}
+
 .semibold {
   font-family: var(--font-body-semibold);
 }
