--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,3 +121,7 @@ p {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.gradient-background {
+  background: var(--berry-linear);
+}
